--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# ---------Added new scripts---------
+venv312516
+.venv312516
+_docs
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
